--- a/app/views/game_templates/user_scissors.html.erb
+++ b/app/views/game_templates/user_scissors.html.erb
@@ -4,3 +4,15 @@
 <h2>They played <%= @comp_move %>!</h2>
  
 <h2>We <%= @outcome %>!</h2>
+
+        <div>
+            <a href="/rock">Play Rock</a>
+        </div>
+        <div>
+            <a href="/paper">Play Paper</a>
+        </div>
+        <div>
+            <a href="/scissors">Play Scissors</a>
+        </div>
+
+         <a href="/"> Rules</a>
